--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 .sidebar {
+  margin: 20px;
+  border: 30px solid green;
+  padding: 10px;
   width: 20%;
   color: red;
   background-color: lavender;
